incorporando funciones de insercion y consulta de datos

--- a/index.html
+++ b/index.html
@@ -222,6 +222,9 @@
     try {
       const response = await fetch("http://localhost:3000/transferencia", {
         method: "post",
+        headers: {
+          'Content-Type': 'application/json'
+        },
         body: JSON.stringify({
           emisor,
           receptor,
@@ -259,8 +262,8 @@
               </tr>
          `);
 
-      $("#emisor").append(`<option value="${c.nombre}">${c.nombre}</option>`);
-      $("#receptor").append(`<option value="${c.nombre}">${c.nombre}</option>`);
+      $("#emisor").append(`<option value="${c.id}">${c.nombre}</option>`);
+      $("#receptor").append(`<option value="${c.id}">${c.nombre}</option>`);
     });
   };
 
